# Interactive_Geometric_Deformation_Engine

./: CMakeLists.txt  README.md
DeformationController/: CMakeLists.txt  EmbeddedDeformation_tools.cpp  Motion_deformation.cpp  Serial.cpp  greedySearch.cpp
DeformationController/include/: EmbeddedDeformation_tools.h  Serial.h  embedDeform.hpp  options.hpp
DeformationController/include/libGraphCpp/: graph.hpp
config/: config.yaml
data/: FAUST_dabing.csv  Kidney_my_final_14.ply  Kidney_my_final_14_Simplification.ply  Sphere.ply  Sphere_press.csv  Sphere_sam.ply  output.ply  output_new.ply
data/Simplification/: Faces_1000.ply  Faces_1767.ply  Faces_2000.ply  Faces_998.ply  Simplification.rar
